@@ -116,16 +116,12 @@ class FOGPageManager extends FOGBase
 			$iterator = new DirectoryIterator($path);
 			foreach ($iterator as $fileInfo)
 			{
-				$className = (!$fileInfo->isDot() && $fileInfo->isFile() && substr($fileInfo->getFilename(),-10) == '.class.php' ? substr($fileInfo->getFilename(),0,-10) : null);
-				foreach($PluginNames AS $PluginName)
-				{
-					if (preg_match('#plugins#i',$fileInfo->getPathname()) && preg_match('#'.$PluginName.'#i',$fileInfo->getPathname()))
-					{
-						$Plugin = current($this->FOGCore->getClass('PluginManager')->find(array('name' => $PluginName,'state' => 1, 'installed' => 1)));
-						if (!$Plugin)
-							$className = null;
-					}
-				}
+				$PluginName = preg_match('#plugins#i',$path) ? basename(substr($path,0,-9)) : '';
+				$Plugin = current($this->FOGCore->getClass('PluginManager')->find(array('name' => $PluginName,'state' => 1, 'installed' => 1)));
+				if ($Plugin)
+					$className = (!$fileInfo->isDot() && $fileInfo->isFile() && substr($fileInfo->getFilename(),-10) == '.class.php' ? substr($fileInfo->getFilename(),0,-10) : null);
+				else if (!preg_match('#plugins#i',$path))
+					$className = (!$fileInfo->isDot() && $fileInfo->isFile() && substr($fileInfo->getFilename(),-10) == '.class.php' ? substr($fileInfo->getFilename(),0,-10) : null);
 				if ($className)
 				{
 					$class = new $className();
