@@ -11,11 +11,14 @@ lib/fog/Config.class.php
 * Fix issue where invalid mac would still create Host with 0 ID in DB.
 * Fix scheduled tasks so styles of 4,5,6 will work properly.
 * Fix Group Host add so they are in their own forms.
+* Fix BUG where redirect was in use to form element and having bad side
+effects.
+* Tweak/fix Mainmenu links so the calls can set multiple menu items.
 * Change imageLegacy to imageFormat for future adjustments where needed.
 * Adjust all 'legacy' image calls to 'format' and change db class for this.
 * Group deployment only cares if uniform image for multicast not for all
 tasks.
-* Add basic element for Access Control as plugin elements. (BETA)
+* Add basic element for Access Control as plugin elements. (WIP)
 * Add ability to adjust timeout values on login system or remove them
 completely.
 * Add Mageia to installer system.  ****THANKS CHUCK SITES****
